<resources>
    <string name="app_name">KvaKsha</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="chatroom_name">Chatroom name</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="select_photo">Select Photo</string>
    <string name="registration">Registration</string>
    <string name="private_messages">Private Messages</string>
    <string name="chatroom_messages">Chatroom Messages</string>
    <string name="create_chatroom">Create Chatroom</string>
    <string name="logout">Logout</string>
    <string name="chatrooms">Chats</string>
    <string name="profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kvaksha_bandmmark">kvaksha_bandmmark</string>
    <string name="forgot_you_password">Forgot you password?</string>
    <string name="reset">Reset</string>
    <string name="your_email">Your email</string>
    <string name="change_nphoto">Change  Photo</string>
    <string name="change_password">Change password</string>
    <string name="change_email">Change Email</string>
    <string name="enter">Enter</string>
    <string name="contact_information">Contact information</string>
    <string name="communicate">Communicate</string>
</resources>
