<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_logout"
            android:title="@string/profile" />

        <item
            android:id="@+id/chatrooms"
            android:icon="@drawable/ic_view_list"
            android:title="@string/chatrooms" />

        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>
    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/contact_information"
                android:icon="@drawable/ic_search"
                android:title="@string/contact_information" />
        </menu>
    </item>
</menu>